--- a/hermel-config/files/www/index.html
+++ b/hermel-config/files/www/index.html
@@ -39,7 +39,7 @@
       #camimage { width:640px; height:480px; }
 
       .ui-page {
-          background:#F09D53;
+          background:#FAA964;
       }
 
       /* simplistic p44 progress bar */
