hermel-config: second day, now in Sep village instead of Izhevsk

--- a/hermel-config/files/www/dual.html
+++ b/hermel-config/files/www/dual.html
@@ -179,11 +179,11 @@
         setTimeout(function() {
           var loc = findGetParameter("loc");
           if (loc=="CH") {
-            $('#localtitle').html('Ижевск, Россия - Izhevsk, Russia');
+            $('#localtitle').html('деревня Сеп, Россия - Sep village, Russia');
             $('#remotetitle').html('Zürich, Switzerland - Цюрих, Швейцария');
           }
           else {
-            $('#remotetitle').html('Ижевск, Россия - Izhevsk, Russia');
+            $('#remotetitle').html('деревня Сеп, Россия - Sep village, Russia');
             $('#localtitle').html('Zürich, Switzerland - Цюрих, Швейцария');
           }
           $('#localcam').html('<h2 class="camimage">connecting...</h2>');
