--- a/hermel-config/files/www/tweak.html
+++ b/hermel-config/files/www/tweak.html
@@ -74,7 +74,9 @@
           '<option disabled>templates</option>' +
           '<option value="1000">{ "cmd":"status" }</option>' +
           '<option value="1010">{ "feature":"wifitrack", "cmd":"save" }</option>' +
-          '<option value="1010">{ "feature":"wifitrack", "cmd":"dump" }</option>' +
+          '<option value="1011">{ "feature":"wifitrack", "cmd":"dump" }</option>' +
+          '<option value="1012">{ "feature":"wifitrack", "cmd":"hide", "ssid":"sss" }</option>' +
+          '<option value="1013">{ "feature":"wifitrack", "cmd":"hide", "mac":"mmm" }</option>' +
           '<option value="1020">{ "feature":"mixloop", "cmd":"status" }</option>' +
           '<option value="1021">{ "feature":"mixloop", "ppp":vvv }</option>' +
           '<option value="1030">{ "cmd":"init", "light":1 }</option>' +
