--- a/hermel-config/files/www/index.html
+++ b/hermel-config/files/www/index.html
@@ -13,7 +13,7 @@
     <script src="js/jquery-1.9.1.min.js"></script>
     <script src="js/jquery.mobile-1.3.2.min.js"></script>
 
-    <title id="html_title_model">HERMEL-MixLoop</title>
+    <title id="html_title_model">35c3 - Chatty Wifi</title>
 
     <style type="text/css"><!--
       h1 { font-family:Helvetica; font-size:24pt; }
@@ -245,6 +245,15 @@
       }
 
 
+      function WTmessage()
+      {
+        var msg = $('#WTmessageText').val();
+        var col = $('#WTmessageColor').val();
+        sendApiCmd('/lethd', { "cmd":"call", "script":"scripts/showmsg.json", "substitutions":{ "MSG":msg, "HASMSG":1, "IMGNAME":"", "HASIMG":0, "COLOR":col } });
+      }
+
+
+
       function callScene()
       {
         var sname = $('#sceneName').val();
@@ -326,6 +335,12 @@
           $('#gridcoordinate').html(response.gridcoordinate);
           // features
           var features = response.features;
+          if (features.wifitrack===false) {
+            $("#wifitrack").hide();
+          }
+          else {
+            $("#wifitrack").show();
+          }
           if (features.mixloop===false) {
             $("#mixloop").hide();
           }
@@ -412,10 +427,19 @@
       </div>
       <div data-role="content">
         <div data-role="content">
-          <h1 id="macaddress">MAC</h1>
-          <p><b>Grid Coordinate: </b><span id="gridcoordinate"></span></p>
-          <p><b>IPv4: </b><span id="ipv4"></span></p>
-          <p><b>Version: </b><span id="appVersion"></span></p>
+          <div id="identification" style="display:none">
+            <h1 id="macaddress">MAC</h1>
+            <p><b>Grid Coordinate: </b><span id="gridcoordinate"></span></p>
+            <p><b>IPv4: </b><span id="ipv4"></span></p>
+            <p><b>Version: </b><span id="appVersion"></span></p>
+          </div>
+
+          <div id="wifitrack">
+            <h2>WiFi Probe request visualisation</h2>
+            <input type="text" autocomplete="off" id="WTmessageText" name="WTmessageText"/>
+            <input type="text" autocomplete="off" id="WTmessageColor" name="WTmessageColor" value="FFF" placeholder="rgb or rrggbb web color"/>
+            <button id="WTmsg_button" onclick="WTmessage();" data-theme="a">Send message to scroller</button>
+          </div>
 
           <div id="hermel">
             <h2>Hermeldon remote player</h2>
@@ -423,7 +447,7 @@
             <button id="shoot_button" onclick="shoot();" data-theme="a">Shoot</button>
           </div>
 
-          <div id="hermel">
+          <div id="mixloop">
             <h2>Hermeldon mixloop</h2>
             <button id="shoot_button" onclick="whoop();" data-theme="a">Whoop!</button>
           </div>
@@ -433,7 +457,7 @@
             <label for="music_volume">Brightness:</label><input type="range" data-highlight="true" name="light_brightness" id="light_brightness" min="0" max="1" step="0.01" />
           </div>
 
-          <div id="text">
+          <div id="text_disabled" style="display:none">
             <h2>Text</h2>
             <label for="text_brightness">Brightness:</label><input type="range" data-highlight="true" name="text_brightness" id="text_brightness" min="0" max="1" step="0.01" />
             <input type="text" autocomplete="off" id="sceneName" name="sceneName" value="" placeholder="scene name"/>
@@ -456,11 +480,13 @@
             <button id="fireButton" onclick="fireNeuron();" data-theme="a">Fire</button>
           </div>
 
-          <h2>(Re)Init Features</h2>
-          <button id="initHermelButton" onclick="initHermel();" data-theme="a">Init Hermeldon remote player</button>
-          <button id="initLightButton" onclick="initLight();" data-theme="a">Init Light</button>
-          <button id="initTextButton" onclick="initText();" data-theme="a">Init Text</button>
-          <button id="initNeuronButton" onclick="initNeuron();" data-theme="a">Init Neuron</button>
+          <div id="features" style="display:none">
+            <h2>(Re)Init Features</h2>
+            <button id="initHermelButton" onclick="initHermel();" data-theme="a">Init Hermeldon remote player</button>
+            <button id="initLightButton" onclick="initLight();" data-theme="a">Init Light</button>
+            <button id="initTextButton" onclick="initText();" data-theme="a">Init Text</button>
+            <button id="initNeuronButton" onclick="initNeuron();" data-theme="a">Init Neuron</button>
+          </div>
 
         </div>
       </div>
@@ -508,8 +534,8 @@
       <div data-role="content">
         <div>
           <div class="centered" data-role="content">
-            <h1 id="about_title_model">HERMEL MixLoop</h1>
-            <h2 id="about_model_description">OpenWrt driven LED controller with Accelerometer</h2>
+            <h1 id="about_title_model">WiFi Track</h1>
+            <h2 id="about_model_description">OpenWrt driven WiFi Probe Request Visualisation</h2>
             <p>© <span id="about_copyright_years">2018</span> by <a href="https://plan44.ch/custom" target="_blank">plan44/luz</a> / <a href="https://github.com/ulai" target="_blank">ulai</a></p>
           </div>
 
