--- a/hermel-config/files/www/tweak.html
+++ b/hermel-config/files/www/tweak.html
@@ -73,11 +73,14 @@
         selectHtml +=
           '<option disabled>templates</option>' +
           '<option value="1000">{ "cmd":"status" }</option>' +
-          '<option value="1010">{ "feature":"wifitrack", "cmd":"save" }</option>' +
-          '<option value="1011">{ "feature":"wifitrack", "cmd":"dump" }</option>' +
-          '<option value="1012">{ "feature":"wifitrack", "cmd":"hide", "ssid":"sss", "hide":true }</option>' +
-          '<option value="1013">{ "feature":"wifitrack", "cmd":"hide", "mac":"mmm", "withperson":false, "hide":true }</option>' +
-          '<option value="1013">{ "feature":"wifitrack", "cmd":"test", "msg":"hello", "imgidx":0, "color":"#0F0" }</option>' +
+          '<option value="1000">{ "cmd":"call", "script":"scripts/xxx.json", "substitutions":{ "MSG":"msg", "HASMSG":1, "IMGNAME":"", "HASIMG":0, "COLOR":"FFF" } }</option>' +
+          '<option value="1010">{ "feature":"wifitrack", "cmd":"dump", "persons":true, "personssids":true, "macs":true, "ouinames":true, "ssids":true }</option>' +
+          '<option value="1011">{ "feature":"wifitrack", "cmd":"save" }</option>' +
+          '<option value="1012">{ "feature":"wifitrack", "cmd":"save", "path":"wifitrack_state.json" }</option>' +
+          '<option value="1013">{ "feature":"wifitrack", "cmd":"hide", "ssid":"sss", "hide":true }</option>' +
+          '<option value="1014">{ "feature":"wifitrack", "cmd":"hide", "mac":"mmm", "withperson":false, "hide":true }</option>' +
+          '<option value="1015">{ "feature":"wifitrack", "cmd":"test", "msg":"hello", "imgidx":0, "color":"#0F0" }</option>' +
+          '<option value="1020">{ "feature":"wifitrack", "cmd":"status" }</option>' +
           '<option value="1020">{ "feature":"mixloop", "cmd":"status" }</option>' +
           '<option value="1021">{ "feature":"mixloop", "ppp":vvv }</option>' +
           '<option value="1030">{ "cmd":"init", "light":1 }</option>' +
