--- a/hermel-config/files/www/tweak.html
+++ b/hermel-config/files/www/tweak.html
@@ -79,7 +79,9 @@
           '<option value="1012">{ "feature":"wifitrack", "cmd":"save", "path":"wifitrack_state.json" }</option>' +
           '<option value="1013">{ "feature":"wifitrack", "cmd":"hide", "ssid":"sss", "hide":true }</option>' +
           '<option value="1014">{ "feature":"wifitrack", "cmd":"hide", "mac":"mmm", "withperson":false, "hide":true }</option>' +
-          '<option value="1015">{ "feature":"wifitrack", "cmd":"test", "msg":"hello", "imgidx":0, "color":"#0F0" }</option>' +
+          '<option value="1015">{ "feature":"wifitrack", "cmd":"rename", "mac":"mmm", "name":"nnn" }</option>' +
+          '<option value="1016">{ "feature":"wifitrack", "cmd":"rename", "mac":"mmm", "name":"nnn", "color":"#F00", "imgidx":0 }</option>' +
+          '<option value="1017">{ "feature":"wifitrack", "cmd":"test", "msg":"hello", "imgidx":0, "color":"#0F0" }</option>' +
           '<option value="1020">{ "feature":"wifitrack", "cmd":"status" }</option>' +
           '<option value="1020">{ "feature":"mixloop", "cmd":"status" }</option>' +
           '<option value="1021">{ "feature":"mixloop", "ppp":vvv }</option>' +
