--- a/p44sbb-config/files/www/index.html
+++ b/p44sbb-config/files/www/index.html
@@ -13,15 +13,17 @@
     <script src="js/jquery-1.9.1.min.js"></script>
     <script src="js/jquery.mobile-1.3.2.min.js"></script>
 
-    <title id="html_title_model">DSB</title>
+    <title id="html_title_model">P44-SBB</title>
 
     <style type="text/css"><!--
-      h1 { font-family:Helvetica; font-size:42pt; }
-      h2 { font-family:Helvetica; font-size:21pt; }
+      h1 { font-family:Helvetica; font-size:24pt; }
+      h2 { font-family:Helvetica; font-size:18pt; }
 
       .centered { margin-left:auto; margin-right:auto; max-width: 640px; text-align: center; }
 
-      span.error    { background-color: #ff0000; }
+      .ui-content { padding: 5px; }
+
+      span.error { background-color: #ff0000; }
 
       span.errortext { color: #e80000; }
       span.warningtext { color: #ff9e00; }
@@ -31,6 +33,7 @@
 
       .p44-mini-input + div.ui-input-text { width: 100px !important; float: right; }
       .p44-mini-input-end { clear: right; }
+
 
 
       /* simplistic p44 progress bar */
@@ -77,6 +80,8 @@
       var restartLocation = window.location.href;
 
       var tickDiff = false;
+
+      var noUpdate = false;
 
       // request validation token
       var rqvaltok = "";
